--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <script>
 var stocksArr = [
-	"532488,Divis Lab",	"524715,Sun Pharma", "532300,Wockhardt",
+	"532488,Divis",	"524715,Sun", "532300,Wockhardt",
 	"532276,Syndicate", "532174,ICICI", "500112,SBI",
 	"500209,Infosys", "532540,TCS","507685,Wipro",
-	"500325,Reliance Ind","532617,Jet Airways","500410,ACC",
+	"500325,Reliance","532617,JetAir","500410,ACC",
 	"530965,IOC", "500312,ONGC",
 ];
 
