--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ function loadStocks(){
 	text-align: right;
 	background-color: #e6ff5c;
 	border: 1px solid #d0d0d0;
-	font-size: 20px;
+	font-size: 16px;
 	box-shadow: 1px 1px 1px #888888;
 	border-radius : 4px;
 }
@@ -163,7 +163,8 @@ function loadStocks(){
 	text-align: right;
 	background-color: #80d242;
 	border: 1px solid #d0d0d0;
-	font-size: 20px;
+	font-size: 16px;
+	font-weight: bold;
 	box-shadow: 1px 1px 1px #888888;
 	border-radius : 4px;
 }
